--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,8 +2,7 @@
 <!-- references the animation trigger -->
 <ul [@listStagger]="users$">
   <li *ngFor="let user of users$">
-    <a routerLink="/details/{{user.id}}">{{ user.name }}</a>
-
+    <a routerLink="/users/{{user.id}}">{{ user.name }}</a>
     <ul>
       <li>{{ user.email }}</li>
       <li>
