--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,8 +2,7 @@
 
 <ul>
   <li *ngFor="let post of posts$">
-    <a routerLink="">{{ post.title }}</a>
-
+    <a routerLink="/posts/{{post.id}}">{{ post.title }}</a>
     <p>{{ post.body }}</p>
   </li>
 </ul>
