--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* global styling is added here */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 body {
      margin: 0;
      background: #F2F2F2;
